--- a/ec2_jenkins_server.yml
+++ b/ec2_jenkins_server.yml
@@ -94,10 +94,10 @@ Resources:
           wget -O /etc/yum.repos.d/jenkins.repo \
             https://pkg.jenkins.io/redhat-stable/jenkins.repo
           rpm --import https://pkg.jenkins.io/redhat-stable/jenkins.io.key
-          yum upgrade
+          yum upgrade -y
           # Add required dependencies for the jenkins package
-          yum install java-11-openjdk
-          yum install jenkins
+          yum install java-11-openjdk -y
+          yum install jenkins -y
           systemctl daemon-reload   
 Outputs:
   InstanceId:
